@@ -55,6 +55,7 @@ Note that python assignment is by reference, creating two links to one object.")
     .def(operator_int_suite<I3Double>())
     .def(operator_float_suite<I3Double>())
     .def("__nonzero__", i3double_bool)
+    .def("__bool__", i3double_bool)    
     .def( freeze() )
     ;
 
