@@ -27,3 +27,6 @@ ENSURE( icetray.I3Int(0) == False, "I3Int == False failed" )
 ENSURE( icetray.I3Int(0) != True, "I3Int != True failed" )
 ENSURE( icetray.I3Int(1) == True, "I3Int == True failed" )
 ENSURE( icetray.I3Int(1) != False, "I3Int != False failed" )
+
+ENSURE( bool(icetray.I3Int(0)) == False, "I3Int == False failed" )
+ENSURE( bool(icetray.I3Int(1)) == True,  "I3Int == True failed" )
